# docs/swagger.yaml
@@ -1,57 +1,5 @@
 basePath: /api/v1
 definitions:
-  dto.CreateUser:
-    properties:
-      email:
-        example: fake@example.com
-        maxLength: 50
-        type: string
-      name:
-        example: fake name
-        maxLength: 50
-        type: string
-      password:
-        example: password1
-        maxLength: 20
-        minLength: 8
-        type: string
-      role:
-        enum:
-        - user
-        - admin
-        example: user
-        maxLength: 50
-        type: string
-    required:
-    - email
-    - name
-    - password
-    - role
-    type: object
-  dto.UpdatePassOrVerify:
-    properties:
-      password:
-        example: password1
-        maxLength: 20
-        minLength: 8
-        type: string
-    type: object
-  dto.UpdateUser:
-    properties:
-      email:
-        example: fake@example.com
-        maxLength: 50
-        type: string
-      name:
-        example: fake name
-        maxLength: 50
-        type: string
-      password:
-        example: password1
-        maxLength: 20
-        minLength: 8
-        type: string
-    type: object
   example.CreateUserResponse:
     properties:
       code:
@@ -183,7 +131,7 @@ definitions:
       code:
         type: integer
       data:
-        $ref: '#/definitions/od_anime_entity.GenreAnime'
+        $ref: '#/definitions/github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_entity_otakudesu_scrape.GenreAnime'
       message:
         type: string
       status:
@@ -195,7 +143,7 @@ definitions:
         example: 200
         type: integer
       data:
-        $ref: '#/definitions/od_anime_entity.EpisodePageResult'
+        $ref: '#/definitions/github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_entity_otakudesu_scrape.EpisodePageResult'
       message:
         example: Berhasil mengambil data!
         type: string
@@ -208,7 +156,7 @@ definitions:
       code:
         type: integer
       data:
-        $ref: '#/definitions/od_anime_entity.AnimeSourceData'
+        $ref: '#/definitions/github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_entity_otakudesu_scrape.AnimeSourceData'
       message:
         type: string
       status:
@@ -221,7 +169,7 @@ definitions:
         type: integer
       data:
         items:
-          $ref: '#/definitions/od_anime_entity.AnimeData'
+          $ref: '#/definitions/github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_entity_otakudesu_scrape.AnimeData'
         type: array
       message:
         example: Berhasil mengambil data!
@@ -513,7 +461,103 @@ definitions:
         example: success
         type: string
     type: object
-  od_anime_entity.AnimeData:
+  github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_dto_auth_request.ForgotPassword:
+    properties:
+      email:
+        example: fake@example.com
+        maxLength: 50
+        type: string
+    required:
+    - email
+    type: object
+  github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_dto_auth_request.Login:
+    properties:
+      email:
+        example: fake@example.com
+        maxLength: 50
+        type: string
+      password:
+        example: password1
+        maxLength: 20
+        minLength: 8
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_dto_auth_request.Register:
+    properties:
+      email:
+        example: fake@example.com
+        maxLength: 50
+        type: string
+      name:
+        example: fake name
+        maxLength: 50
+        type: string
+      password:
+        example: password1
+        maxLength: 20
+        minLength: 8
+        type: string
+    required:
+    - email
+    - name
+    - password
+    type: object
+  github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_dto_user_request.CreateUser:
+    properties:
+      email:
+        example: fake@example.com
+        maxLength: 50
+        type: string
+      name:
+        example: fake name
+        maxLength: 50
+        type: string
+      password:
+        example: password1
+        maxLength: 20
+        minLength: 8
+        type: string
+      role:
+        enum:
+        - user
+        - admin
+        example: user
+        maxLength: 50
+        type: string
+    required:
+    - email
+    - name
+    - password
+    - role
+    type: object
+  github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_dto_user_request.UpdatePassOrVerify:
+    properties:
+      password:
+        example: password1
+        maxLength: 20
+        minLength: 8
+        type: string
+    type: object
+  github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_dto_user_request.UpdateUser:
+    properties:
+      email:
+        example: fake@example.com
+        maxLength: 50
+        type: string
+      name:
+        example: fake name
+        maxLength: 50
+        type: string
+      password:
+        example: password1
+        maxLength: 20
+        minLength: 8
+        type: string
+    type: object
+  github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_entity_otakudesu_scrape.AnimeData:
     properties:
       judul_path:
         type: string
@@ -528,13 +572,13 @@ definitions:
       url:
         type: string
     type: object
-  od_anime_entity.AnimeDetail:
+  github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_entity_otakudesu_scrape.AnimeDetail:
     properties:
       duration:
         type: string
       genres:
         items:
-          $ref: '#/definitions/od_anime_entity.GenreInfo'
+          $ref: '#/definitions/github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_entity_otakudesu_scrape.GenreInfo'
         type: array
       producer:
         type: string
@@ -555,14 +599,14 @@ definitions:
       total_eps:
         type: string
     type: object
-  od_anime_entity.AnimeEpisode:
+  github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_entity_otakudesu_scrape.AnimeEpisode:
     properties:
       title:
         type: string
       video_url:
         type: string
     type: object
-  od_anime_entity.AnimeSourceData:
+  github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_entity_otakudesu_scrape.AnimeSourceData:
     properties:
       current_ep:
         type: string
@@ -570,7 +614,7 @@ definitions:
         type: string
       episodes:
         items:
-          $ref: '#/definitions/od_anime_entity.AnimeEpisode'
+          $ref: '#/definitions/github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_entity_otakudesu_scrape.AnimeEpisode'
         type: array
       next_ep_url:
         type: string
@@ -578,21 +622,21 @@ definitions:
         type: string
       sources:
         items:
-          $ref: '#/definitions/od_anime_entity.VideoSource'
+          $ref: '#/definitions/github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_entity_otakudesu_scrape.VideoSource'
         type: array
       title:
         type: string
     type: object
-  od_anime_entity.EpisodePageResult:
+  github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_entity_otakudesu_scrape.EpisodePageResult:
     properties:
       anime_detail:
-        $ref: '#/definitions/od_anime_entity.AnimeDetail'
+        $ref: '#/definitions/github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_entity_otakudesu_scrape.AnimeDetail'
       episode:
         items:
-          $ref: '#/definitions/od_anime_entity.AnimeEpisode'
+          $ref: '#/definitions/github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_entity_otakudesu_scrape.AnimeEpisode'
         type: array
     type: object
-  od_anime_entity.GenreAnime:
+  github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_entity_otakudesu_scrape.GenreAnime:
     properties:
       episodes:
         type: string
@@ -605,65 +649,21 @@ definitions:
       url:
         type: string
     type: object
-  od_anime_entity.GenreInfo:
+  github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_entity_otakudesu_scrape.GenreInfo:
     properties:
       title:
         type: string
       url:
         type: string
     type: object
-  od_anime_entity.VideoSource:
+  github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_entity_otakudesu_scrape.VideoSource:
     properties:
       data_list:
         items:
-          $ref: '#/definitions/od_anime_entity.AnimeEpisode'
+          $ref: '#/definitions/github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_entity_otakudesu_scrape.AnimeEpisode'
         type: array
       res:
         type: string
-    type: object
-  validation.ForgotPassword:
-    properties:
-      email:
-        example: fake@example.com
-        maxLength: 50
-        type: string
-    required:
-    - email
-    type: object
-  validation.Login:
-    properties:
-      email:
-        example: fake@example.com
-        maxLength: 50
-        type: string
-      password:
-        example: password1
-        maxLength: 20
-        minLength: 8
-        type: string
-    required:
-    - email
-    - password
-    type: object
-  validation.Register:
-    properties:
-      email:
-        example: fake@example.com
-        maxLength: 50
-        type: string
-      name:
-        example: fake name
-        maxLength: 50
-        type: string
-      password:
-        example: password1
-        maxLength: 20
-        minLength: 8
-        type: string
-    required:
-    - email
-    - name
-    - password
     type: object
 host: dev.msaepul.my.id
 info:
@@ -682,7 +682,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/validation.ForgotPassword'
+          $ref: '#/definitions/github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_dto_auth_request.ForgotPassword'
       produces:
       - application/json
       responses:
@@ -719,7 +719,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/validation.Login'
+          $ref: '#/definitions/github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_dto_auth_request.Login'
       produces:
       - application/json
       responses:
@@ -794,7 +794,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/validation.Register'
+          $ref: '#/definitions/github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_dto_auth_request.Register'
       produces:
       - application/json
       responses:
@@ -824,7 +824,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/dto.UpdatePassOrVerify'
+          $ref: '#/definitions/github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_dto_user_request.UpdatePassOrVerify'
       produces:
       - application/json
       responses:
@@ -1044,7 +1044,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/dto.CreateUser'
+          $ref: '#/definitions/github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_dto_user_request.CreateUser'
       produces:
       - application/json
       responses:
@@ -1150,7 +1150,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/dto.UpdateUser'
+          $ref: '#/definitions/github_com_muhammadsaefulr_NimeStreamAPI_pkg_domain_dto_user_request.UpdateUser'
       produces:
       - application/json
       responses:
